<resources>
    <string name="app_name">DecaPay</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_fragment_header_login">Login</string>
    <string name="login_fragment_email_field_title_email">Email</string>
    <string name="login_fragment_password_field_title_password">Password</string>
    <string name="login_fragment_email_textinputedittext_hint_email">Enter your email</string>
    <string name="login_fragment_email_textinputedittext_hint_password">Enter your password</string>
    <string name="login_fragment_remember_login">Remember login</string>
    <string name="login_fragment_login_button">Login</string>
    <string name="login_fragment_forgot_password">Forgot Password?</string>
    <string name="login_fragment_donthaveanaccount">Don\'t have an account?</string>
    <string name="login_fragment_create_account">Create Account</string>
    <string name="test_fragment">Budget Listing In Progress</string>
    <string name="please_wait">Please wait…</string>
    <string name="email_password_validation_feedback">Invalid email or password; please check your login credentials</string>
    <string name="sign_up_validation_feedback">Please fix all errors within the form</string>
    <string name="create_your_account">Create your account</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="email">Email</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_hilt">HiltActivity</string>
    <string name="budget">Budget</string>
    <string name="budget_category">Budget Category</string>
    <string name="log_out">Log Out</string>
    <string name="name_place_holder">Ugochukwu</string>
    <string name="dashboard">Dashboard</string>
    <string name="email_place_holder">Ugochi45@gmail.com</string>
    <string name="forgot_password_fragment_navigate_back_title">Back</string>
    <string name="forgot_password_fragment_title_reset_password">Reset Password</string>
    <string name="forgot_password_fragment_title_reset_password_call_out_action">Enter the email associated with your account and\nwe\'ll send an email with instruction to reset your\npassword</string>
    <string name="forgot_password_fragment_email_textinputedittext_email">abayomitunde@gmail.com</string>
    <string name="forgot_password_fragment_login_button">Reset Password</string>
    <string name="email_validation_feedback">Invalid email; please check your email</string>
    <string name="create_new_password_fragment_title">Create New Password</string>
    <string name="create_new_password_fragment_email">New Password</string>
    <string name="create_new_password_fragment_new_password">New Password</string>
    <string name="create_new_password_fragment_confirm_password_title">Confirm Password</string>
    <string name="create_new_password_fragment_sign_up">Sign Up</string>
    <string name="create_new_password_fragment_validation_feedback">Invalid password</string>
    <string name="verify_password_reset_code_fragment_verification">Verification</string>
    <string name="verify_password_reset_code_fragment_title_reset_password_call_out_action_verify">Please enter the verification code we sent to your\nemail address</string>
    <string name="verify_password_reset_code_fragment_verify_button_verify">Verify</string>
    <string name="error_exception_unknown_error">Unknown Error</string>
    <string name="error_exception_network_error">Network Error</string>
    <string name="error_exception_time_out_error">Timeout Error</string>
    <string name="view_details">View details</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="empty_list_sub_header">You’ve not created any budget list yet. Click on the + sign icon below to create a budget.</string>
    <string name="no_line_item">No line item found in this Budget</string>
    <string name="log">Log</string>
    <string name="percentage">Percentage</string>
    <string name="total_amount_spent">Total Amount spent</string>
    <string name="create_budget_fragment_title_tv">Create Budget</string>
    <string name="create_budget_fragment_label_title">Title <font color='#FF0000'>*</font></string>
    <string name="create_budget_fragment_hint_title">Enter title</string>
    <string name="create_budget_fragment_label_amount">Projected Amount <font color='#FF0000'>*</font></string>
    <string name="create_budget_fragment_hint_amount">Enter amount</string>
    <string name="create_budget_fragment_label_buget_period">Budget period <font color='#FF0000'>*</font></string>
    <string name="create_budget_fragment_required_field_msg"> <font color='#FF0000'>*</font> All fields asterisked are required</string>
    <string name="create_budget_fragment_hint_select">Select</string>
    <string name="create_budget_fragment_label_description">Description</string>
    <string name="create_budget_fragment_hint_add_description_here">Add description here</string>
    <string name="create_budget_fragment_done_button">Done</string>
    <string name="option_modal_bottom_sheet_fragment_instruction">You can select <b>custom</b> to choose your perfect\ndate</string>
    <string name="option_modal_bottom_sheet_fragment_periodic_option_annual">Annual</string>
    <string name="option_modal_bottom_sheet_fragment_periodic_option_monthly">Monthly</string>
    <string name="option_modal_bottom_sheet_fragment_periodic_option_weeklyly">Weekly</string>
    <string name="option_modal_bottom_sheet_fragment_periodic_option_daily">Daily</string>
    <string name="option_modal_bottom_sheet_fragment_periodic_option_custom">Custom</string>
    <string name="create_budget_fragment_buget_period_autocomplete_view">Please select a period</string>
    <string-array name="budget_periods">
        <item>Annual</item>
        <item>Monthly</item>
        <item>Weekly</item>
        <item>Daily</item>
        <item>Custom</item>
    </string-array>
    <string name="reate_budget_fragment_buget_period_annual_year">Enter year</string>
    <string-array name="budget_period_month">
        <item>January</item>
        <item>Feburary</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
    </string-array>
    <string-array name="budget_period_weekly">
        <item>Week 1</item>
        <item>Week 2</item>
        <item>Week 3</item>
        <item>Week 4</item>
        <item>Week 5</item>
    </string-array>
    <string name="create_budget_fragment_budget_period_daily_select_date">Select Date</string>
    <string name="create_budget_fragment_budget_period_custom_selection">Start date, End date</string>
    <string-array name="choose_year">
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
    </string-array>
    <string name="create_budget_fragment_budget_period_weekly_start_date">Start date</string>
    <string name="create_budget_fragment_budget_period_weekly_duration">Enter duration</string>
    <string name="edit_budget_fragment_title">Edit Budget</string>
    <string name="no_budget_yet">No Budget yet</string>
    <string name="plan_ahead_header">Plan ahead your expenses and \ntake total control</string>
    <string name="take_control_subheader">Take control of your money by tracking expenses</string>
    <string name="create_budget_category_fragment_title">Create Category</string>
    <string name="create_budget_category_fragment_callout">What do you usually spend on\?</string>
    <string name="create_budget_category_fragment_name_category">Name of Category</string>
    <string name="edit_budget_category_fragment_name_category">Name of Category <font color='#FF0000'>*</font></string>
    <string name="create_budget_category_fragment_name_category_hint">Enter name of item</string>
    <string name="create_budget_category_fragment_name_category_add">Add</string>
    <string name="edit_budget_category_fragment_title">Edit Category</string>
    <string name="edit_budget_category_fragment_name_category_save">Save</string>
    <string name="create_budget_line_item_bottom_sheet_title">Create Budget Line Item</string>
    <string name="create_budget_line_item_bottom_sheet_label_category">Category <font color='#FF0000'>*</font></string>
    <string name="create_budget_line_item_bottom_sheet_label_projected_amount">Projected Amount <font color='#FF0000'>*</font></string>
    <string name="create_budget_line_item_bottom_sheet_label_projected_amount_hint">N0.00</string>
    <string name="create_budget_line_item_bottom_sheet_fragment_create_button">Create</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>
    <string name="custom_toast_tst">My feedback</string>
    <string name="view_expenses">view_expenses</string>
    <string name="projected_amount">Projected amount -</string>
    <string name="amount_so_far">Amount so far -</string>
    <string name="createBudgetLineItem_fragment_error_message">The BudgetLine Item Already Exist</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="time_logged">Time Logged</string>
    <string name="no_expenses_yet">No Expenses Yet</string>
    <string name="logExpense_bottom_sheet_title">Transportation</string>
    <string name="logExpense_bottom_sheet_fragment_transaction_date">Transaction Date <font color='#FF0000'>*</font></string>
    <string name="logExpense_bottom_sheet_fragment_transaction_date_hint">Current Date</string>
    <string name="logExpense_bottom_sheet_fragment_label_amount_spent">Amount Spent <font color='#FF0000'>*</font></string>
    <string name="logExpense_bottom_sheet_fragment_description">Description <font color='#FF0000'>*</font></string>
    <string name="logExpense_bottom_sheet_fragment_description_hint">Type description here..</string>
    <string name="logExpense_bottom_sheet_fragment_save_button">Save</string>
    <string name="logExpense_bottom_sheet_fragment_cancel_button">Cancel</string>
    <string name="edit_budget_line_item_bottom_sheet_title">Edit Budget Line Item</string>
    <string name="edit_budget_line_item_bottom_sheet_fragment_create_button">Update</string>
    <string name="editBudgetLineItem_category">Category</string>
    <string name="change_password_fragment_title">Change Password</string>
    <string name="change_password_fragment_password_label">Password</string>
    <string name="change_password_fragment_password_hint">Password</string>
    <string name="change_password_fragment_new_password_label">New Password</string>
    <string name="change_password_fragment_new_password_hint">New Password</string>
    <string name="change_password_fragment_confirm_password_label">Confirm New Password</string>
    <string name="change_password_fragment_confirm_password_hint">Confirm New Password</string>
    <string name="change_password_fragment_change_password_button">Change Password</string>
    <string name="profile">Profile</string>
    <string name="change_password">Change Password</string>
</resources>