<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.login.LoginFragment"
    android:orientation="vertical"
    >


    <TextView
        android:id="@+id/login_fragment_header_login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/login_fragment_header_login"
        android:textSize="@dimen/login_fragment_header_login_txsiz" />

    <TextView
        android:id="@+id/login_fragment_email_field_title_email_tv"
        android:layout_width="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/login_fragment_email_field_title_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_fragment_email_textinputlayout_email_til"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:hintEnabled="false"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_fragment_email_textinputedittext_hint_email"
            android:inputType="textEmailAddress"
            android:lines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/login_fragment_email_field_title_password_tv"
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/login_fragment_password_field_title_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_fragment_password_textinputlayout_password_til"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:hintEnabled="false"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_fragment_password_textinputlayout_password_tiedt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_fragment_email_textinputedittext_hint_password"
            android:lines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/login_fragment_remember_login_chk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:text="@string/login_fragment_remember_login"
        android:layout_marginTop="8dp"
        android:layout_marginStart="10dp"
        />

    <Button
        android:id="@+id/login_fragment_login_button_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/login_button_bg"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/login_fragment_login_button"
        android:textAllCaps="false"
        android:textColor="@color/white" />


</androidx.appcompat.widget.LinearLayoutCompat>