<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".feature.createbudget.presentation.bottomsheet.OptionModalBottomSheetFragment"
    >
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/option_modal_bg"
        android:padding="16dp"
        >

        <TextView
            android:id="@+id/option_modal_bottom_sheet_fragment_select_title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/create_budget_fragment_hint_select"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textSize="@dimen/option_modal_bottom_sheet_fragment_select_title_txsiz" />
        <ImageView
            android:id="@+id/option_modal_bottom_sheet_fragment_close_icon_iv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            android:scaleType="fitEnd"
            android:layout_weight="1"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/option_modal_bottom_sheet_fragment_instruction_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:padding="4dp"
        android:background="@drawable/option_menu_bottomsheet_text_bg"
        android:text="@string/option_modal_bottom_sheet_fragment_instruction"
        android:textSize="@dimen/option_modal_bottom_sheet_fragment_instruction_txsiz" />

    <TextView
        android:id="@+id/option_modal_bottom_sheet_fragment_options_annual_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/option_modal_bottom_sheet_fragment_periodic_option_annual"
        android:textSize="@dimen/option_modal_bottom_sheet_fragment_options_annual_txsiz" />
    <TextView
        android:id="@+id/option_modal_bottom_sheet_fragment_options_monthly_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/option_modal_bottom_sheet_fragment_periodic_option_monthly"
        android:textSize="@dimen/option_modal_bottom_sheet_fragment_options_annual_txsiz" />
    <TextView
        android:id="@+id/option_modal_bottom_sheet_fragment_options_weekly_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/option_modal_bottom_sheet_fragment_periodic_option_weeklyly"
        android:textSize="@dimen/option_modal_bottom_sheet_fragment_options_annual_txsiz" />
    <TextView
        android:id="@+id/option_modal_bottom_sheet_fragment_options_daily_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/option_modal_bottom_sheet_fragment_periodic_option_daily"
        android:textSize="@dimen/option_modal_bottom_sheet_fragment_options_annual_txsiz" />
    <TextView
        android:id="@+id/option_modal_bottom_sheet_fragment_options_custom_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/option_modal_bottom_sheet_fragment_periodic_option_custom"
        android:textSize="@dimen/option_modal_bottom_sheet_fragment_options_annual_txsiz" />



</androidx.appcompat.widget.LinearLayoutCompat>