<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".feature.forgotpassword.presentation.ForgotPasswordFragment">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        >
        <ImageView
            android:id="@+id/forgot_password_fragment_navigate_back_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_navigate_back"
            />

        <TextView
            android:id="@+id/forgot_password_navigate_back_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/forgot_password_fragment_navigate_back_title"
             />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/forgot_password_fragment_title_reset_password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/forgot_password_fragment_title_reset_password"
        android:textSize="@dimen/forgot_password_fragment_title_reset_password_txsiz" />

    <TextView
        android:id="@+id/forgot_password_fragment_title_reset_password_call_out_action_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/forgot_password_fragment_title_reset_password_call_out_action"
        android:textSize="@dimen/forgot_password_fragment_title_reset_password_call_out_action_txsiz" />

    <TextView
        android:id="@+id/forgot_password_fragment_email_field_title_email_tv"
        android:layout_width="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/login_fragment_email_field_title_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/forgot_password_fragment_email_textinputlayout_email_til"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:errorEnabled="true"
        app:hintEnabled="false"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgot_password_fragment_email_textinputedittext_email_tiedt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/forgot_password_fragment_email_textinputedittext_email"
            android:inputType="textEmailAddress"
            android:lines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/forgot_password_fragment_login_button_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/login_button_bg"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/forgot_password_fragment_login_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/verify_password_reset_code_fragment_verify_button_txsiz" />
</androidx.appcompat.widget.LinearLayoutCompat>