<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >



    <TextView
        android:id="@+id/delete_modal_header_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_you_want_to_delete"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textStyle="bold"
        android:textSize="18sp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_modal_yes_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/decapay_green"
        android:text="@string/yes"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"

        android:textAllCaps="false"
        android:textColor="@color/white"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_modal_no_btn"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:alpha="0.17"
        android:text="@string/no"

        android:textAllCaps="false"
        android:textColor="@color/white"
        />






</androidx.appcompat.widget.LinearLayoutCompat>